lib/src/g/gapi.g.dart


@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_NV12toRGBp(
  GMat src_y,
  GMat src_uv,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2Gray(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Float, ffi.Float, ffi.Float, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2Gray_1(
  GMat src,
  double rY,
  double gY,
  double bY,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2HSV(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2I420(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2Lab(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2YUV(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_RGB2YUV422(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, ffi.Int, ffi.Int,
        ffi.Double, ffi.Double, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_Sobel(
  GMat src,
  int ddepth,
  int dx,
  int dy,
  int ksize,
  double scale,
  double delta,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, ffi.Int, ffi.Double,
        ffi.Double, ffi.Int, Scalar, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_SobelXY(
  GMat src,
  int ddepth,
  int order,
  int ksize,
  double scale,
  double delta,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
  ffi.Pointer<GMat> rval1,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_YUV2BGR(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_YUV2RGB(
  GMat src,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_add(
  GMat src1,
  GMat src2,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, GScalar, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_addC(
  GMat src,
  GScalar c,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GScalar, GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_addC_1(
  GScalar c,
  GMat src,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Double, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_bilateralFilter(
  GMat src,
  int d,
  double sigmaColor,
  double sigmaSpace,
  int borderType,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, CvSize, CvPoint, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_blur(
  GMat src,
  CvSize ksize,
  CvPoint anchor,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint2f, ffi.Pointer<GOpaqueRect>)>()
external ffi.Pointer<CvStatus> gapi_boundingRect(
  GArrayPoint2f src,
  ffi.Pointer<GOpaqueRect> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint2i, ffi.Pointer<GOpaqueRect>)>()
external ffi.Pointer<CvStatus> gapi_boundingRect_1(
  GArrayPoint2i src,
  ffi.Pointer<GOpaqueRect> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GOpaqueRect>)>()
external ffi.Pointer<CvStatus> gapi_boundingRect_2(
  GMat src,
  ffi.Pointer<GOpaqueRect> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, CvSize, CvPoint, ffi.Bool,
        ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_boxFilter(
  GMat src,
  int dtype,
  CvSize ksize,
  CvPoint anchor,
  bool normalize,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GMat, ffi.Bool, ffi.Pointer<GMat>, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_cartToPolar(
  GMat x,
  GMat y,
  bool angleInDegrees,
  ffi.Pointer<GMat> rval,
  ffi.Pointer<GMat> rval1,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_concatHor(
  GMat src1,
  GMat src2,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_concatVert(
  GMat src1,
  GMat src2,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Double, ffi.Double, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_convertTo(
  GMat src,
  int rdepth,
  double alpha,
  double beta,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_copy_1(
  GMat in$,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, CvRect, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_crop(
  GMat src,
  CvRect rect,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, Mat, CvPoint, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_dilate(
  GMat src,
  Mat kernel,
  CvPoint anchor,
  int iterations,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_dilate3x3(
  GMat src,
  int iterations,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_div(
  GMat src1,
  GMat src2,
  double scale,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, GScalar, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_divC(
  GMat src,
  GScalar divisor,
  double scale,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GScalar, GMat, ffi.Double, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_divRC(
  GScalar divident,
  GMat src,
  double scale,
  int ddepth,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, Mat, CvPoint, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_erode(
  GMat src,
  Mat kernel,
  CvPoint anchor,
  int iterations,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Int, Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_erode3x3(
  GMat src,
  int iterations,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, Mat, CvPoint, Scalar, ffi.Int,
        Scalar, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_filter2D(
  GMat src,
  int ddepth,
  Mat kernel,
  CvPoint anchor,
  Scalar delta,
  int borderType,
  Scalar borderValue,
  ffi.Pointer<GMat> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Int, ffi.Pointer<GArrayGArrayPoint>)>()
external ffi.Pointer<CvStatus> gapi_findContours(
  GMat src,
  int mode,
  int method,
  ffi.Pointer<GArrayGArrayPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int,
        ffi.Pointer<GArrayGArrayPoint>, ffi.Pointer<GArrayVec4i>)>()
external ffi.Pointer<CvStatus> gapi_findContoursH(
  GMat src,
  int mode,
  int method,
  ffi.Pointer<GArrayGArrayPoint> rval,
  ffi.Pointer<GArrayVec4i> rval1,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Int, GOpaquePoint,
        ffi.Pointer<GArrayGArrayPoint>, ffi.Pointer<GArrayVec4i>)>()
external ffi.Pointer<CvStatus> gapi_findContoursH_1(
  GMat src,
  int mode,
  int method,
  GOpaquePoint offset,
  ffi.Pointer<GArrayGArrayPoint> rval,
  ffi.Pointer<GArrayVec4i> rval1,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(
        GMat, ffi.Int, ffi.Int, GOpaquePoint, ffi.Pointer<GArrayGArrayPoint>)>()
external ffi.Pointer<CvStatus> gapi_findContours_1(
  GMat src,
  int mode,
  int method,
  GOpaquePoint offset,
  ffi.Pointer<GArrayGArrayPoint> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint2d, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine2D(
  GArrayPoint2d src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint2f, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine2D_1(
  GArrayPoint2f src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint2i, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine2D_2(
  GArrayPoint2i src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
        ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine2D_3(
  GMat src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint3d, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine3D_1(
  GArrayPoint3d src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint3f, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine3D_2(
  GArrayPoint3f src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GArrayPoint3i, ffi.Int, ffi.Double,
        ffi.Double, ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine3D_3(
  GArrayPoint3i src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<
    ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Double, ffi.Double,
        ffi.Double, ffi.Pointer<GOpaqueVec4f>)>()
external ffi.Pointer<CvStatus> gapi_fitLine3D_4(
  GMat src,
  int distType,
  double param,
  double reps,
  double aeps,
  ffi.Pointer<GOpaqueVec4f> rval,
);

@ffi.Native<ffi.Pointer<CvStatus> Function(GMat, ffi.Int, ffi.Pointer<GMat>)>()
external ffi.Pointer<CvStatus> gapi_flip(
  GMat src,
  int flipCode,
  ffi.Pointer<GMat> rval,
);
